--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.2.3",
     "chart.js": "^3.6.2",
     "country-state-city": "^3.0.1",
     "npm": "^8.7.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
+    "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
@@ -29,12 +30,12 @@
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
-    "react-js-pagination": "^3.0.3",
+    "react-js-pagination": "^3.0.2",
     "react-material-ui-carousel": "^2.3.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
