--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "real-estate",
   "version": "1.0.0",
   "description": "",
   "main": "backend/server.js",
@@ -12,7 +12,7 @@
     "dev": "nodemon backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "shahriar sajeeb",
+  "author": "pratik shrestha",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
