--- a/backend/config/.env
+++ b/backend/config/.env
@@ -13,3 +13,6 @@ CLOUDINARY_NAME = ddqsnhu2v
 CLOUDINARY_API_KEY = 716517961772951
 
 CLOUDINARY_API_SECRET = oGpWMAK40LBUPhH0T4QOmgmG4Bg
+
+AWS_ACCESS_KEY_ID= AKIA44VTXTLKO2S7KV35
+AWS_SECRET_ACCESS_KEY= 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'
