--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "@emailjs/browser": "^3.5.0",
     "@emotion/react": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
@@ -25,6 +27,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^3.6.2",
     "country-state-city": "^3.0.1",
+    "dotenv": "^16.0.3",
     "npm": "^8.7.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -38,10 +41,12 @@
     "react-icons": "^4.8.0",
     "react-js-pagination": "^3.0.2",
     "react-material-ui-carousel": "^2.3.1",
+    "react-paginate": "^8.1.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "^2.1.3",
+    "react-table": "^7.8.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
