--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
     "react-external-link": "^2.0.1",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
