--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "google-map-react": "^2.2.0",
+    "googlemaps": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
