--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,19 +5,20 @@
   "dependencies": {
     "@emailjs/browser": "^3.5.0",
     "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/js-api-loader": "^1.15.1",
     "@headlessui/react": "^1.7.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.11.15",
-    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.26.0",
     "@testing-library/jest-dom": "^5.16.2",
