--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.8.0",
     "react-js-pagination": "^3.0.2",
     "react-material-ui-carousel": "^2.3.1",
+    "react-multi-carousel": "^2.8.3",
     "react-paginate": "^8.1.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
