--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-fade-in": "^2.0.1",
     "react-google-places-autocomplete": "^3.4.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
     "react-js-pagination": "^3.0.2",
@@ -52,7 +53,6 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "^2.1.3",
     "react-table": "^7.8.0",
-    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
