--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.2.3",
     "carousel": "^0.0.3",
-    "chart.js": "^3.6.2",
+    "chart.js": "^3.9.1",
     "country-state-city": "^3.0.1",
     "dotenv": "^16.0.3",
     "npm": "^8.7.0",
@@ -53,6 +53,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "^2.1.3",
     "react-table": "^7.8.0",
+    "react-toastify": "8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
