--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^1.29.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
     "google-map-react": "^2.2.0",
